# TCLIBTORCH

./: .cursorrules  .gitignore  API.md  CMakeLists.txt  COMMAND-TRACKING.md  CUDA_INTEGRATION_SUCCESS.md  CUDA_LIBRARIES_STATUS.md  CURRENT_STATUS.md  ENHANCEMENT_PLAN.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_TESTING_SUMMARY.md  FUTURE.txt  IMPLEMENTATION-VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  MODULAR_IMPLEMENTATION_SUMMARY.md  PHASE2-COMPLETION-REPORT.md  PHASE2-CONVOLUTION-COMPLETION-REPORT.md  PHASE2-LOSS-FUNCTIONS-COMPLETION-REPORT.md  PHASE2-POOLING-COMPLETION-REPORT.md  README.md  REFACTOR-TODO.md  REFACTORING-QUICK-START.md  REFACTORING-WORKFLOW.md  REMAINING-TODO.md  TESTING_RESULTS.md  TODO.md  USER-GUIDE.md  blas_comparison.py  conv1_state.pt  current_commands.txt  debug_zeros_like.tcl  fix_variables.py  fix_warnings.py  fold_test.tcl  model_state.pt  ones_like_test.tcl  refactoring_progress.db  summary.txt  tensor_min_test.tcl  (+39 more)
docs/refactored/: acos.md  acosh.md  adaptive_avgpool1d.md  adaptive_avgpool3d.md  adaptive_maxpool1d.md  adaptive_maxpool3d.md  affine_grid.md  all_reduce.md  arange.md  asin.md  asinh.md  atan.md  atan2.md  atanh.md  atleast_1d.md  atleast_2d.md  atleast_3d.md  autocast_disable.md  autocast_enable.md  autocast_is_enabled.md  autocast_set_dtype.md  avgpool1d.md  avgpool2d.md  avgpool2d_tensor.md  avgpool3d.md  bartlett_window.md  batch_norm1d.md  batch_norm2d.md  bce_loss.md  benchmark.md  bernoulli.md  bitwise_and.md  bitwise_left_shift.md  bitwise_not.md  bitwise_or.md  broadcast_tensors.md  cartesian_prod.md  ceil.md  channel_shuffle.md  cholesky_solve.md  (+446 more)
scripts/: commit_refactored.sh  init_tracking_db.py  query_next_commands.py  refactoring_progress.db  select_next_command.sh  test_refactored.sh  update_command_status.py  update_progress.sh
src/: activation_functions.cpp  additional_optimizers.cpp  advanced_layers.cpp  advanced_signal_processing.cpp  advanced_tensor_operations.cpp  advanced_tensor_ops.cpp  amp_precision.cpp  automatic_differentiation.cpp  basic_layers.cpp  basic_optimizers.cpp  basic_tensor_ops.cpp  cuda_utils.cpp  distributed_operations.cpp  distributed_training.cpp  embedding_layers.cpp  extended_convolution_layers.cpp  extended_loss_functions.cpp  extended_optimizers.cpp  extended_pooling_layers.cpp  helpers.cpp  learning_rate_schedulers.cpp  libtorchtcl.cpp  libtorchtcl.h  linear_algebra.cpp  linear_algebra_extensions.cpp  loss_functions.cpp  mathematical_operations.cpp  memory_performance.cpp  model_checkpointing.cpp  model_io.cpp  neural_device_management.cpp  padding_layers.cpp  parameter_parsing.cpp  parameter_parsing.h  quantization_operations.cpp  random_number_generation.cpp  recurrent_layers.cpp  signal_processing.cpp  sparse_tensor_operations.cpp  tensor_conversions.cpp  (+7 more)
test-static/: CMakeLists.txt  conv1_state.pt  main.cpp  test.tcl
test-static/build.backup/: Makefile  cmake_install.cmake
tests/: advanced_functionality_tests.tcl  basic_functionality_tests.tcl  confirmed_working_tests.tcl  dtype_check.tcl  real_functionality_tests.tcl
tests/refactored/: FAILED.txt  acos_test.tcl  acosh_test.tcl  adaptive_avgpool1d_test.tcl  adaptive_avgpool3d_test.tcl  adaptive_maxpool1d_test.tcl  adaptive_maxpool3d_test.tcl  affine_grid_test.tcl  all_reduce_test.tcl  arange_test.tcl  asin_test.tcl  asinh_test.tcl  atan2_test.tcl  atan_test.tcl  atanh_test.tcl  atleast_1d_test.tcl  atleast_2d_test.tcl  atleast_3d_test.tcl  autocast_disable_test.tcl  autocast_enable_test.tcl  autocast_is_enabled_test.tcl  autocast_set_dtype_test.tcl  avgpool1d_test.tcl  avgpool2d_tensor_test.tcl  avgpool2d_test.tcl  avgpool3d_test.tcl  bartlett_window_test.tcl  batch_norm1d_test.tcl  batch_norm2d_test.tcl  batch_norm3d_test.tcl  batchnorm2d_test.tcl  bce_loss_test.tcl  benchmark_test.tcl  bernoulli_test.tcl  bitwise_and_test.tcl  bitwise_left_shift_test.tcl  bitwise_not_test.tcl  bitwise_or_test.tcl  bitwise_right_shift_test.tcl  bitwise_xor_test.tcl  (+456 more)
